# VIdeoPlayer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  FormatTime.hpp  OpenCVRenderer.cpp  OpenCVRenderer.hpp  OpenCVVideoSource.cpp  OpenCVVideoSource.hpp  ParseTimestamp.cpp  ParseTimestamp.hpp  PlayerCommand.hpp  PlayerContext.cpp  PlayerContext.hpp  Renderer.hpp  SrtSubtitleProvider.cpp  SrtSubtitleProvider.hpp  StringTrim.hpp  SubtitleCue.hpp  SubtitleProvider.hpp  UserInterface.hpp  VideoInfo.hpp  VideoPlayer.cpp  VideoPlayer.hpp  VideoSource.hpp
tests/: CMakeLists.txt  test4test.cpp  tests_FormatTime.cpp  tests_OpenCVRenderer.cpp  tests_OpenCVVideoSource.cpp  tests_ParseTimestamp.cpp  tests_PlayerContext.cpp  tests_SrtSubtitleProvider.cpp  tests_StringTrim.cpp  tests_SubtitleCue.cpp  tests_VideoInfo.cpp
